--- a/sass/themes/dark.scss
+++ b/sass/themes/dark.scss
@@ -44,10 +44,13 @@ $text: hsl(iv.$scheme-h, iv.$scheme-s, $text-l);
       "text-strong-l": 93%,
       "text-title-l": 100%,
       "hover-background-l-delta": 5%,
+      "focus-background-l-delta": 5%,
       "active-background-l-delta": 10%,
       "hover-border-l-delta": 10%,
+      "focus-border-l-delta": 10%,
       "active-border-l-delta": 20%,
       "hover-color-l-delta": 5%,
+      "focus-color-l-delta": 5%,
       "active-color-l-delta": 10%,
     )
   );
