--- a/sass/themes/light.scss
+++ b/sass/themes/light.scss
@@ -27,16 +27,20 @@ $scheme-main: hsl(iv.$scheme-h, iv.$scheme-s, $scheme-main-l);
       "bold-invert-l": iv.$light-l,
 
       // Deltas
-      "hover-background-l-delta": -5%,
-      "active-background-l-delta": -10%,
+      "hover-background-l-delta": -5,
+      "focus-background-l-delta": -5,
+      "active-background-l-delta": -10,
 
-      "hover-border-l-delta": -10%,
-      "active-border-l-delta": -20%,
+      "hover-border-l-delta": -10,
+      "focus-border-l-delta": -10,
+      "active-border-l-delta": -20,
 
-      "hover-color-l-delta": -5%,
-      "active-color-l-delta": -10%,
+      "hover-color-l-delta": -5,
+      "focus-color-l-delta": -5,
+      "active-color-l-delta": -10,
 
       "hover-shadow-a-delta": -0.05,
+      "focus-shadow-a-delta": -0.05,
       "active-shadow-a-delta": -0.1,
 
       // Light only
