--- a/sass/components/menu.scss
+++ b/sass/components/menu.scss
@@ -3,20 +3,33 @@
 @use "../utilities/extends";
 @use "../utilities/mixins" as mx;
 
-$menu-item-h: cv.getVar("scheme-h");
-$menu-item-s: cv.getVar("scheme-s");
-$menu-item-l: cv.getVar("scheme-main-l");
-$menu-item-background-l: cv.getVar("scheme-main-l");
-$menu-item-background-l-delta: 0%;
-$menu-item-hover-background-l-delta: cv.getVar("hover-background-l-delta");
-$menu-item-active-background-l-delta: cv.getVar("active-background-l-delta");
-$menu-item-color-l: cv.getVar("text-l");
+$menu-item-background-color: cv.getVar("scheme-main") !default;
+$menu-item-color: cv.getVar("text") !default;
+$menu-item-hover-background-color: hsl(
+  from #{cv.getVar("menu-item-background-color")} h s calc(l + #{cv.getVar(
+          "hover-background-l-delta"
+        )})
+) !default;
+$menu-item-hover-color: cv.getVar("text-strong") !default;
+$menu-item-active-background-color: hsl(
+  from #{cv.getVar("menu-item-background-color")} h s calc(l + #{cv.getVar(
+          "active-background-l-delta"
+        )})
+) !default;
+$menu-item-active-color: cv.getVar("text-strong") !default;
+$menu-item-selected-background-color: cv.getVar("link") !default;
+$menu-item-selected-color: cv.getVar("link-invert") !default;
+$menu-item-selected-hover-background-color: hsl(
+  from #{cv.getVar("menu-item-selected-background-color")} h s calc(l + #{cv.getVar(
+          "hover-background-l-delta"
+        )})
+) !default;
+$menu-item-selected-active-background-color: hsl(
+  from #{cv.getVar("menu-item-selected-background-color")} h s calc(l + #{cv.getVar(
+          "active-background-l-delta"
+        )})
+) !default;
 $menu-item-radius: cv.getVar("radius-small") !default;
-$menu-item-selected-h: cv.getVar("link-h");
-$menu-item-selected-s: cv.getVar("link-s");
-$menu-item-selected-l: cv.getVar("link-l");
-$menu-item-selected-background-l: cv.getVar("link-l");
-$menu-item-selected-color-l: cv.getVar("link-invert-l");
 
 $menu-list-border-left: 1px solid cv.getVar("border") !default;
 $menu-list-line-height: 1.25 !default;
@@ -32,20 +45,17 @@ $menu-label-spacing: 1em !default;
 .#{iv.$class-prefix}menu {
   @include cv.register-vars(
     (
-      "menu-item-h": #{$menu-item-h},
-      "menu-item-s": #{$menu-item-s},
-      "menu-item-l": #{$menu-item-l},
-      "menu-item-background-l": #{$menu-item-background-l},
-      "menu-item-background-l-delta": #{$menu-item-background-l-delta},
-      "menu-item-hover-background-l-delta": #{$menu-item-hover-background-l-delta},
-      "menu-item-active-background-l-delta": #{$menu-item-active-background-l-delta},
-      "menu-item-color-l": #{$menu-item-color-l},
+      "menu-item-background-color": #{$menu-item-background-color},
+      "menu-item-color": #{$menu-item-color},
+      "menu-item-hover-background-color": #{$menu-item-hover-background-color},
+      "menu-item-hover-color": #{$menu-item-hover-color},
+      "menu-item-active-background-color": #{$menu-item-active-background-color},
+      "menu-item-active-color": #{$menu-item-active-color},
+      "menu-item-selected-background-color": #{$menu-item-selected-background-color},
+      "menu-item-selected-color": #{$menu-item-selected-color},
+      "menu-item-selected-hover-background-color": #{$menu-item-selected-hover-background-color},
+      "menu-item-selected-active-background-color": #{$menu-item-selected-active-background-color},
       "menu-item-radius": #{$menu-item-radius},
-      "menu-item-selected-h": #{$menu-item-selected-h},
-      "menu-item-selected-s": #{$menu-item-selected-s},
-      "menu-item-selected-l": #{$menu-item-selected-l},
-      "menu-item-selected-background-l": #{$menu-item-selected-background-l},
-      "menu-item-selected-color-l": #{$menu-item-selected-color-l},
       "menu-list-border-left": #{$menu-list-border-left},
       "menu-list-line-height": #{$menu-list-line-height},
       "menu-list-link-padding": #{$menu-list-link-padding},
@@ -83,60 +93,41 @@ $menu-label-spacing: 1em !default;
   button,
   .#{iv.$class-prefix}menu-item {
     @extend %reset;
-    background-color: hsl(
-      #{cv.getVar("menu-item-h")},
-      #{cv.getVar("menu-item-s")},
-      calc(
-        #{cv.getVar("menu-item-background-l")} + #{cv.getVar(
-            "menu-item-background-l-delta"
-          )}
-      )
-    );
+    background-color: cv.getVar("menu-item-background-color");
     border-radius: cv.getVar("menu-item-radius");
-    color: hsl(
-      #{cv.getVar("menu-item-h")},
-      #{cv.getVar("menu-item-s")},
-      #{cv.getVar("menu-item-color-l")}
-    );
+    color: cv.getVar("menu-item-color");
     display: block;
     padding: cv.getVar("menu-list-link-padding");
     text-align: left;
     width: 100%;
 
     &:hover {
-      @include cv.register-vars(
-        (
-          "menu-item-background-l-delta": #{cv.getVar(
-              "menu-item-hover-background-l-delta"
-            )},
-        )
-      );
+      background-color: cv.getVar("menu-item-hover-background-color");
+      color: cv.getVar("menu-item-hover-color");
     }
 
     &:active {
-      @include cv.register-vars(
-        (
-          "menu-item-background-l-delta": #{cv.getVar(
-              "menu-item-active-background-l-delta"
-            )},
-        )
-      );
+      background-color: cv.getVar("menu-item-active-background-color");
+      color: cv.getVar("menu-item-active-color");
     }
 
     // Modifiers
     &.#{iv.$class-prefix}is-active,
     &.#{iv.$class-prefix}is-selected {
-      @include cv.register-vars(
-        (
-          "menu-item-h": #{cv.getVar("menu-item-selected-h")},
-          "menu-item-s": #{cv.getVar("menu-item-selected-s")},
-          "menu-item-l": #{cv.getVar("menu-item-selected-l")},
-          "menu-item-background-l": #{cv.getVar(
-              "menu-item-selected-background-l"
-            )},
-          "menu-item-color-l": #{cv.getVar("menu-item-selected-color-l")},
-        )
-      );
+      background-color: cv.getVar("menu-item-selected-background-color");
+      color: cv.getVar("menu-item-selected-color");
+
+      &:hover {
+        background-color: cv.getVar(
+          "menu-item-selected-hover-background-color"
+        );
+      }
+
+      &:active {
+        background-color: cv.getVar(
+          "menu-item-selected-active-background-color"
+        );
+      }
     }
   }
 
