Add navbar-breakpoint as a CSS variable

--- a/sass/components/navbar.scss
+++ b/sass/components/navbar.scss
@@ -90,7 +90,7 @@ $navbar-divider-height: 0.125em !default;
 
 $navbar-bottom-box-shadow-size: 0 -0.125em 0 0 !default;
 
-$navbar-breakpoint: iv.$desktop !default;
+$navbar-breakpoint: cv.getVar("navbar-breakpoint") !default;
 
 $navbar-colors: dv.$colors !default;
 
