--- a/sass/utilities/derived-variables.scss
+++ b/sass/utilities/derived-variables.scss
@@ -1,6 +1,8 @@
 @use "initial-variables" as iv;
 @use "functions" as fn;
 
+$navbar-breakpoint: iv.$desktop !default;
+
 // Scheme colors
 
 $scheme-main: iv.$white !default;
