--- a/docs/website.scss
+++ b/docs/website.scss
@@ -397,9 +397,15 @@ $container-max-width: iv.$fullhd;
 
 .skeleton-toggler {
   position: fixed;
-  right: 1rem;
+  right: 13.5rem;
   bottom: 1rem;
-  z-index: 1;
+  z-index: 2;
+}
+
+@include mx.mobile {
+  .skeleton-toggler {
+    right: 1rem;
+  }
 }
 
 .js-resizable {
