--- a/sass/themes/dark.scss
+++ b/sass/themes/dark.scss
@@ -6,13 +6,13 @@
 @use "setup";
 
 // The main lightness of this theme
-$scheme-main-l: 9%;
-$background-l: 14%;
+$scheme-main-l: 9;
+$background-l: 14;
 $text-l: 71%;
 
 // The main scheme color, used to make calculations
-$scheme-main: hsl(iv.$scheme-h, iv.$scheme-s, $scheme-main-l);
-$background: hsl(iv.$scheme-h, iv.$scheme-s, $background-l);
+$scheme-main: hsl(iv.$scheme-h, iv.$scheme-s, $scheme-main-l * 1%);
+$background: hsl(iv.$scheme-h, iv.$scheme-s, $background-l * 1%);
 $text: hsl(iv.$scheme-h, iv.$scheme-s, $text-l);
 
 @mixin dark-theme {
@@ -30,8 +30,8 @@ $text: hsl(iv.$scheme-h, iv.$scheme-s, $text-l);
     (
       "scheme-brightness": "dark",
       "scheme-main-l": $scheme-main-l,
-      "scheme-main-bis-l": $scheme-main-l + 2%,
-      "scheme-main-ter-l": $scheme-main-l + 4%,
+      "scheme-main-bis-l": $scheme-main-l + 2,
+      "scheme-main-ter-l": $scheme-main-l + 4,
       "soft-l": iv.$dark-l,
       "bold-l": iv.$light-l,
       "soft-invert-l": iv.$light-l,
