--- a/sass/themes/light.scss
+++ b/sass/themes/light.scss
@@ -7,10 +7,10 @@
 @use "setup";
 
 // The main lightness of this theme
-$scheme-main-l: 100%;
+$scheme-main-l: 100;
 
 // The main scheme color, used to make calculations
-$scheme-main: hsl(iv.$scheme-h, iv.$scheme-s, $scheme-main-l);
+$scheme-main: hsl(iv.$scheme-h, iv.$scheme-s, $scheme-main-l * 1%);
 
 @mixin light-theme {
   @include cv.register-vars(
@@ -48,7 +48,7 @@ $scheme-main: hsl(iv.$scheme-h, iv.$scheme-s, $scheme-main-l);
       "scheme-main-l": $scheme-main-l,
       "scheme-main-bis-l": 98%,
       "scheme-main-ter-l": 96%,
-      "background-l": 96%,
+      "background-l": 96,
       "border-weak-l": 93%,
       "border-l": 86%,
       "text-weak-l": 48%,
