--- a/sass/themes/setup.scss
+++ b/sass/themes/setup.scss
@@ -8,7 +8,7 @@
         hsl(
           #{cv.getVar("scheme-h")},
           #{cv.getVar("scheme-s")},
-          #{cv.getVar("scheme-main-l")}
+          calc(#{cv.getVar("scheme-main-l")} * 1%)
         ),
       "scheme-main-bis":
         hsl(
