Replace placeholder mixin with pseudo-element

--- a/sass/base/skeleton.scss
+++ b/sass/base/skeleton.scss
@@ -65,7 +65,7 @@ input.#{iv.$class-prefix}is-skeleton,
 textarea.#{iv.$class-prefix}is-skeleton {
   resize: none;
 
-  @include mx.placeholder {
+  &::placeholder {
     color: transparent !important;
   }
 }
