--- a/sass/form/shared.scss
+++ b/sass/form/shared.scss
@@ -121,7 +121,7 @@ $input-radius: cv.getVar("radius") !default;
     #{cv.getVar("input-color-l")}
   );
 
-  @include mx.placeholder {
+  &::placeholder {
     color: cv.getVar("input-placeholder-color");
   }
 
@@ -167,7 +167,7 @@ $input-radius: cv.getVar("radius") !default;
     box-shadow: none;
     color: cv.getVar("input-disabled-color");
 
-    @include mx.placeholder {
+    &::placeholder {
       color: cv.getVar("input-disabled-placeholder-color");
     }
   }
